deploy/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chuck-norris-api
  name: chuck-norris-api
spec:
  selector:
    app: chuck-norris-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
